--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "hello_world_main.c"
-                    INCLUDE_DIRS "")
+idf_component_register(SRCS "connect.c" "stdin_out.c" "web_server.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES "tcpip_adapter")
+
