working on reading in data

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "connect.c" "stdin_out.c" "web_server.c"
+idf_component_register(SRCS "wifi.c" "ft_strlen.c" "ft_strlcpy.c" "tcp_server.c" "main.c" "info.c" "send_data.c"
                     INCLUDE_DIRS "include"
                     REQUIRES "tcpip_adapter")
 
